@@ -4,6 +4,7 @@ Log:
 
 - 04/09/2006, version 0.2.7: roms
 	- fixed TI73 probing
+	- added new TI89 error code (0x21: can't delete var)
 
 - 26/08/2006, version 0.2.6: roms
 	- checked with ValGring, tested and validated.
